Port to the new libraries in SDK 8.0

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <title>Vue.js Stock-List Demo</title>
 
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.26/vue.min.js"></script>
-        <script type="text/javascript" src="js/lightstreamer.js"></script>
+        <script type="text/javascript" src="js/lightstreamer.js" data-lightstreamer-ns="Lightstreamer"></script>
 
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
